testing and fixing
